Login and Role setting completed